# foundry-model-testing

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
specs/: memory.md  spec.md
src/: model-comparison-notebook.ipynb  openai-gpt5-notebook.ipynb  responses-api-notebook.ipynb
